<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart" android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_orders" />
    </group>
</menu>
